--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,19 @@
     top: 50%;
     transform: translateY(-40px);
   }
+
+  .toolbar {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    background: #211f23;
+    padding: 10px;
+    margin-top: 50px;
+    margin-bottom: 35px;
+    border-radius: 7px;
+    border: 10px;
+    -moz-box-shadow: 0 0 3px #000000;
+    -webkit-box-shadow: 0 0 3px #000000;
+    box-shadow: 0 0 3px #000000;
+  }
